--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1077,6 +1077,10 @@ select {
 	bottom: 0px;
 	left: 0px;
 }
+.inset-y-0 {
+	top: 0px;
+	bottom: 0px;
+}
 .left-0 {
 	left: 0px;
 }
@@ -1085,6 +1089,9 @@ select {
 }
 .top-0 {
 	top: 0px;
+}
+.bottom-0 {
+	bottom: 0px;
 }
 .z-0 {
 	z-index: 0;
@@ -1097,6 +1104,24 @@ select {
 }
 .col-span-6 {
 	grid-column: span 6 / span 6;
+}
+.col-span-3 {
+	grid-column: span 3 / span 3;
+}
+.col-span-7 {
+	grid-column: span 7 / span 7;
+}
+.col-span-9 {
+	grid-column: span 9 / span 9;
+}
+.col-span-1 {
+	grid-column: span 1 / span 1;
+}
+.col-span-4 {
+	grid-column: span 4 / span 4;
+}
+.col-span-5 {
+	grid-column: span 5 / span 5;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1174,6 +1199,9 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
+.mr-10 {
+	margin-right: 2.5rem;
+}
 .block {
 	display: block;
 }
@@ -1215,6 +1243,12 @@ select {
 }
 .h-20 {
 	height: 5rem;
+}
+.h-48 {
+	height: 12rem;
+}
+.h-full {
+	height: 100%;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1261,6 +1295,18 @@ select {
 .w-20 {
 	width: 5rem;
 }
+.w-64 {
+	width: 16rem;
+}
+.w-1\/4 {
+	width: 25%;
+}
+.w-1\/6 {
+	width: 16.666667%;
+}
+.w-1\/5 {
+	width: 20%;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1299,6 +1345,10 @@ select {
 	--tw-translate-y: 0px;
 	transform: var(--tw-transform);
 }
+.-translate-x-full {
+	--tw-translate-x: -100%;
+	transform: var(--tw-transform);
+}
 .scale-95 {
 	--tw-scale-x: .95;
 	--tw-scale-y: .95;
@@ -1329,6 +1379,18 @@ select {
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-10 {
+	grid-template-columns: repeat(10, minmax(0, 1fr));
+}
+.grid-cols-12 {
+	grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+.grid-cols-4 {
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.grid-cols-5 {
+	grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -1432,6 +1494,9 @@ select {
 .border-b {
 	border-bottom-width: 1px;
 }
+.border-r {
+	border-right-width: 1px;
+}
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1450,6 +1515,10 @@ select {
 .border-gray-100 {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+}
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1498,6 +1567,10 @@ select {
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+.bg-blue-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1664,6 +1737,9 @@ select {
 .tracking-widest {
 	letter-spacing: 0.1em;
 }
+.tracking-wider {
+	letter-spacing: 0.05em;
+}
 .text-gray-500 {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -1820,6 +1896,9 @@ select {
 .duration-1000 {
 	transition-duration: 1000ms;
 }
+.duration-100 {
+	transition-duration: 100ms;
+}
 .ease-in-out {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1856,6 +1935,10 @@ select {
 .hover\:bg-gray-50:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.hover\:bg-white:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
@@ -2001,8 +2084,16 @@ select {
 }
 @media (min-width: 640px) {
 
+	.sm\:relative {
+		position: relative;
+	}
+
 	.sm\:col-span-4 {
 		grid-column: span 4 / span 4;
+	}
+
+	.sm\:col-span-1 {
+		grid-column: span 1 / span 1;
 	}
 
 	.sm\:mx-0 {
@@ -2105,6 +2196,16 @@ select {
 		transform: var(--tw-transform);
 	}
 
+	.sm\:-translate-x-0 {
+		--tw-translate-x: 0px;
+		transform: var(--tw-transform);
+	}
+
+	.sm\:translate-x-0 {
+		--tw-translate-x: 0px;
+		transform: var(--tw-transform);
+	}
+
 	.sm\:scale-95 {
 		--tw-scale-x: .95;
 		--tw-scale-y: .95;
@@ -2115,6 +2216,10 @@ select {
 		--tw-scale-x: 1;
 		--tw-scale-y: 1;
 		transform: var(--tw-transform);
+	}
+
+	.sm\:grid-cols-5 {
+		grid-template-columns: repeat(5, minmax(0, 1fr));
 	}
 
 	.sm\:items-start {
@@ -2206,12 +2311,24 @@ select {
 		grid-column: span 1 / span 1;
 	}
 
+	.md\:col-span-4 {
+		grid-column: span 4 / span 4;
+	}
+
 	.md\:mt-0 {
 		margin-top: 0px;
 	}
 
+	.md\:flex {
+		display: flex;
+	}
+
 	.md\:grid {
 		display: grid;
+	}
+
+	.md\:hidden {
+		display: none;
 	}
 
 	.md\:grid-cols-3 {
