--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1077,9 +1077,9 @@ select {
 	bottom: 0px;
 	left: 0px;
 }
-.inset-y-0 {
-	top: 0px;
-	bottom: 0px;
+.inset-x-0 {
+	left: 0px;
+	right: 0px;
 }
 .left-0 {
 	left: 0px;
@@ -1102,26 +1102,14 @@ select {
 .z-40 {
 	z-index: 40;
 }
+.z-20 {
+	z-index: 20;
+}
+.z-10 {
+	z-index: 10;
+}
 .col-span-6 {
 	grid-column: span 6 / span 6;
-}
-.col-span-3 {
-	grid-column: span 3 / span 3;
-}
-.col-span-7 {
-	grid-column: span 7 / span 7;
-}
-.col-span-9 {
-	grid-column: span 9 / span 9;
-}
-.col-span-1 {
-	grid-column: span 1 / span 1;
-}
-.col-span-4 {
-	grid-column: span 4 / span 4;
-}
-.col-span-5 {
-	grid-column: span 5 / span 5;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1199,8 +1187,8 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
-.mr-10 {
-	margin-right: 2.5rem;
+.ml-5 {
+	margin-left: 1.25rem;
 }
 .block {
 	display: block;
@@ -1244,11 +1232,8 @@ select {
 .h-20 {
 	height: 5rem;
 }
-.h-48 {
-	height: 12rem;
-}
-.h-full {
-	height: 100%;
+.h-64 {
+	height: 16rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1294,18 +1279,6 @@ select {
 }
 .w-20 {
 	width: 5rem;
-}
-.w-64 {
-	width: 16rem;
-}
-.w-1\/4 {
-	width: 25%;
-}
-.w-1\/6 {
-	width: 16.666667%;
-}
-.w-1\/5 {
-	width: 20%;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1379,18 +1352,6 @@ select {
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.grid-cols-10 {
-	grid-template-columns: repeat(10, minmax(0, 1fr));
-}
-.grid-cols-12 {
-	grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-.grid-cols-4 {
-	grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-.grid-cols-5 {
-	grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -1568,6 +1529,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+.bg-blue-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
+}
 .bg-blue-600 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
@@ -1673,6 +1638,9 @@ select {
 }
 .pt-8 {
 	padding-top: 2rem;
+}
+.pr-3 {
+	padding-right: 0.75rem;
 }
 .text-left {
 	text-align: left;
@@ -1896,9 +1864,6 @@ select {
 .duration-1000 {
 	transition-duration: 1000ms;
 }
-.duration-100 {
-	transition-duration: 100ms;
-}
 .ease-in-out {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1936,9 +1901,13 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.hover\:bg-white:hover {
+.hover\:bg-blue-400:hover {
 	--tw-bg-opacity: 1;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+}
+.hover\:bg-blue-500:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
@@ -1959,6 +1928,10 @@ select {
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.hover\:text-black:hover {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 .focus\:z-10:focus {
 	z-index: 10;
@@ -2006,6 +1979,10 @@ select {
 .focus\:bg-gray-50:focus {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.focus\:bg-blue-100:focus {
+	--tw-bg-opacity: 1;
+	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 .focus\:text-gray-700:focus {
 	--tw-text-opacity: 1;
@@ -2088,12 +2065,12 @@ select {
 		position: relative;
 	}
 
-	.sm\:col-span-4 {
-		grid-column: span 4 / span 4;
+	.sm\:top-0 {
+		top: 0px;
 	}
 
-	.sm\:col-span-1 {
-		grid-column: span 1 / span 1;
+	.sm\:col-span-4 {
+		grid-column: span 4 / span 4;
 	}
 
 	.sm\:mx-0 {
@@ -2167,6 +2144,10 @@ select {
 		width: 100%;
 	}
 
+	.sm\:w-1\/5 {
+		width: 20%;
+	}
+
 	.sm\:max-w-md {
 		max-width: 28rem;
 	}
@@ -2196,11 +2177,6 @@ select {
 		transform: var(--tw-transform);
 	}
 
-	.sm\:-translate-x-0 {
-		--tw-translate-x: 0px;
-		transform: var(--tw-transform);
-	}
-
 	.sm\:translate-x-0 {
 		--tw-translate-x: 0px;
 		transform: var(--tw-transform);
@@ -2216,10 +2192,6 @@ select {
 		--tw-scale-x: 1;
 		--tw-scale-y: 1;
 		transform: var(--tw-transform);
-	}
-
-	.sm\:grid-cols-5 {
-		grid-template-columns: repeat(5, minmax(0, 1fr));
 	}
 
 	.sm\:items-start {
@@ -2311,24 +2283,12 @@ select {
 		grid-column: span 1 / span 1;
 	}
 
-	.md\:col-span-4 {
-		grid-column: span 4 / span 4;
-	}
-
 	.md\:mt-0 {
 		margin-top: 0px;
 	}
 
-	.md\:flex {
-		display: flex;
-	}
-
 	.md\:grid {
 		display: grid;
-	}
-
-	.md\:hidden {
-		display: none;
 	}
 
 	.md\:grid-cols-3 {
